5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1616_2942.log
== TEST (2019-04-01 14:03:15) 
-- CODE:
quantidade = int(input("quantos donuts se quer fazer?"))
print(2)
print(150)
print(120)
-- OUTPUT:
2
150
120
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:03:22) 
-- CODE:
quantidade = int(input("quantos donuts se quer fazer?"))
print(2)
print(150)
print(120)
-- EXECUTION TIME:
0.19941
-- TEST CASE 1:
---- input:
24
---- correct output:
4.0
300.0
240.0
---- user output:
2
150
120
-- TEST CASE 2:
---- input:
6
---- correct output:
1.0
75.0
60.0
---- user output:
2
150
120
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:10:19) 
-- CODE:
quantidade = int(input("quantos donuts se quer fazer?"))
print(1)
print(75)
print(60)
-- OUTPUT:
1
75
60
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:10:36) 
-- CODE:
quantidade = int(input("quantos donuts se quer fazer?"))
print(1)
print(75)
print(60)
-- EXECUTION TIME:
0.226611
-- TEST CASE 1:
---- input:
24
---- correct output:
4.0
300.0
240.0
---- user output:
1
75
60
-- TEST CASE 2:
---- input:
6
---- correct output:
1.0
75.0
60.0
---- user output:
1
75
60
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:14:21) 
-- CODE:
quantidade = int(input("quantos donuts se quer fazer?"))


print(2/12)
print(150/12)
print(120/12)
-- OUTPUT:
0.16666666666666666
12.5
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:15:42) 
-- CODE:
quantidade = int(input("quantos donuts se quer fazer?"))
ovos = quantidade*0.16
leite = 12,5*quantidade
farinha = 10*quantidade

print(ovo)
print(leite)
print(farinha)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(ovo)
NameError: name 'ovo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:16:41) 
-- CODE:
quantidade = int(input("quantos donuts se quer fazer?"))
ovos = int(quantidade*0.16)
leite = 12,5*quantidade
farinha = 10*quantidade

print(ovo)
print(leite)
print(farinha)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(ovo)
NameError: name 'ovo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:17:27) 
-- CODE:
quantidade = int(input("quantos donuts se quer fazer?"))
ovos = 6 * quantidade
leite = 12,5*quantidade
farinha = 10*quantidade

print()
print(leite)
print(farinha)
-- OUTPUT:
(12, 120)
240
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:17:50) 
-- CODE:
quantidade = int(input("quantos donuts se quer fazer?"))
ovos = 6 * quantidade
leite = 12,5*quantidade
farinha = 10*quantidade

print(ovos)
print(leite)
print(farinha)
-- OUTPUT:
144
(12, 120)
240
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:25:31) 
-- CODE:
quantidade = float(input("quantos donuts se quer fazer?"))
ovos = 2*quantidade
leite = 150*quantidade
farinha = 120*quantidade
print(ovos)
print(leite)
print(farinha)
-- OUTPUT:
48.0
3600.0
2880.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:27:55) 
-- CODE:
quantidade = float(input("quantos donuts se quer fazer?"))
ovos = quantidade/2
leite = quantidade/150
farinha = quantidade/120
print(ovos)
print(leite)
print(farinha)
-- OUTPUT:
12.0
0.16
0.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:28:03) 
-- CODE:
quantidade = float(input("quantos donuts se quer fazer?"))
ovos = quantidade/2
leite = quantidade/150
farinha = quantidade/120
print(ovos)
print(leite)
print(farinha)
-- EXECUTION TIME:
0.203332
-- TEST CASE 1:
---- input:
24
---- correct output:
4.0
300.0
240.0
---- user output:
12.0
0.16
0.2
-- TEST CASE 2:
---- input:
6
---- correct output:
1.0
75.0
60.0
---- user output:
3.0
0.04
0.05
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:28:15) 
-- CODE:
quantidade = float(input("quantos donuts se quer fazer?"))
ovos = quantidade/2
leite = quantidade/150
farinha = quantidade/120
print(ovos)
print(leite)
print(farinha)
-- OUTPUT:
12.0
0.16
0.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:29:17) 
-- CODE:
quantidade = float(input("quantos donuts se quer fazer?"))
ovos = quantidade*(2/12)
leite = quantidade*(150/12)
farinha = quantidade*(120/12)
print(ovos)
print(leite)
print(farinha)
-- EXECUTION TIME:
0.174546
-- TEST CASE 1:
---- input:
24
---- correct output:
4.0
300.0
240.0
---- user output:
4.0
300.0
240.0
-- TEST CASE 2:
---- input:
6
---- correct output:
1.0
75.0
60.0
---- user output:
1.0
75.0
60.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
